# Practical-Python-Design-Paterns

./: .gitignore  LICENSE  README.md
Builder-Pattern/: README.md
CH01/: README.md
CH02/: example_1.py  example_2.py  logger_singleton.py
CH03/: concrete.py  pygame_example_1.py  pygame_example_2.py  rts_mutli_unit.py  rts_prototype.py  rts_simple.py  variables.py
CH04/: graphic_base.py  shape_game.py
CH06/: README.md
CH07/: README.md
CH08/: README.md
CH11/: README.md
CH13/: README.md
CH14/: README.md
CH15/: state_patttern.py
CH17/: README.md  example_2.py  example_4.py  example_6.py
CHO2/: logger.py  logger_class.py  main_script.py  new_script_with_logger.py  test_error_log.py
Chain-of-Responsibility-Pattern/: README.md
Docs/: 30-day-roadmap.docx  30-day-roadmap.md
Factory-Pattern/: README.md  shape_game.py
Interpreter-Pattern/: README.md
Model-View-Controller-Pattern/: README.md
Notes/: Chapter_02_The_Singleton_Pattern.md  Chapter_03_The_Prototype_Pattern.md  Template.md  uv.md
Projects/app/: README.md  patterns_log.md  pyproject.toml
Projects/app/src/: main.py
Prototype-Pattern/: README.md  deep_copy.py  logger_singleton.py  nested_structure_shallow_copy.py  prototype_1.py  rts_custom.py  rts_prototype.py  shallow_copy.py
Proxy-Pattern/: README.md
Publisher-Subscriber-Pattern/: README.md
Singleton-Pattern/: README.md  exercise_1.py  exercise_1_test.py  logger_class.py  practice_1.py  session_manager.py  singleton_object.py  test_singleton.py
State-Pattern/: README.md
Strategy-Pattern/: README.md
(+5 files in other folders)
